--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	</head>
 	<body>
 		<main class="main-wrapper">
+			<!-- First Card -->
 			<section class="first-card">
 				<div class="first-card-user-container">
 					<img
@@ -55,59 +56,79 @@
 					</p>
 				</article>
 			</section>
+			<!-- Second Card -->
 			<section class="second-card">
-				<div>
-					<img src="./src/images/image-jonathan.jpg" alt="image-jonathan" />
+				<div class="second-card-user-container">
+					<img
+						src="./src/images/image-jonathan.jpg"
+						alt="image-jonathan"
+						class="second-card-user-img"
+					/>
 					<div>
-						<p>Jonathan Walters</p>
-						<p>Verified Graduate</p>
+						<p class="second-card-user-name">Jonathan Walters</p>
+						<p class="second-card-user-verified">Verified Graduate</p>
 					</div>
 				</div>
-
-				<article>
-					<p>The team was very supportive and kept me motivated</p>
+				<article class="second-card-title-container">
+					<p class="second-card-title-text">
+						The team was very supportive and kept me motivated
+					</p>
 				</article>
-				<article>
-					<p>
+				<article class="second-card-content-container">
+					<p class="second-card-content-text">
 						“ I started as a total newbie with virtually no coding skills. I now
 						work as a mobile engineer for a big company. This was one of the
 						best investments I’ve made in myself. ”
 					</p>
 				</article>
 			</section>
-			<section class="three-card">
-				<div>
-					<img src="./src/images/image-jeanette.jpg" alt="image-jeanette" />
+			<!-- Third Card -->
+			<section class="third-card">
+				<div class="third-card-user-container">
+					<img
+						src="./src/images/image-jeanette.jpg"
+						alt="image-jeanette"
+						class="third-card-user-img"
+					/>
 					<div>
-						<p>Jeanette Harmon</p>
-						<p>Verified Graduate</p>
+						<p class="third-card-user-name">Jeanette Harmon</p>
+						<p class="third-card-user-verified">Verified Graduate</p>
 					</div>
 				</div>
-				<article><p>An overall wonderful and rewarding experience</p></article>
-				<article>
-					<p>
+				<article class="third-card-title-container">
+					<p class="third-card-title-text">
+						An overall wonderful and rewarding experience
+					</p>
+				</article>
+				<article class="third-card-content-container">
+					<p class="third-card-content-text">
 						“ Thank you for the wonderful experience! I now have a job I really
 						enjoy, and make a good living while doing something I love. ”
 					</p>
 				</article>
 			</section>
-			<section class="four-card">
-				<div>
-					<img src="./src/images/image-patrick.jpg" alt="image-patrick" />
+			<!-- Fourth Card -->
+			<section class="fourth-card">
+				<div class="fourth-card-user-container">
+					<img
+						src="./src/images/image-patrick.jpg"
+						alt="image-patrick"
+						class="fourth-card-user-img"
+					/>
 					<div>
-						<p>Patrick Abrams</p>
-						<p>Verified Graduate</p>
+						<p class="fourth-card-user-name">Patrick Abrams</p>
+						<p class="fourth-card-user-verified">Verified Graduate</p>
 					</div>
 				</div>
-				<article>
-					<p>
+				<article class="fourth-card-title-container">
+					<p class="fourth-card-title-text">
 						Awesome teaching support from TAs who did the bootcamp themselves.
 						Getting guidance from them and learning from their experiences was
 						easy.
 					</p>
 				</article>
-				<article>
-					<p>
+				<article class="fourth-card-content-container">
+					<p class="fourth-card-content-text">
 						“ The staff seem genuinely concerned about my progress which I find
 						really refreshing. The program gave me the confidence necessary to
 						be able to go out in the world and present myself as a capable
@@ -117,19 +138,26 @@
 					</p>
 				</article>
 			</section>
-			<section>
-				<div>
-					<img src="./src/images/image-kira.jpg" alt="image-kira" />
+			<!-- Fifth Card -->
+			<section class="fifth-card">
+				<div class="fifth-card-user-container">
+					<img
+						src="./src/images/image-kira.jpg"
+						alt="image-kira"
+						class="fifth-card-user-img"
+					/>
 					<div>
-						<p>Kira Whittle</p>
-						<p>Verified Graduate</p>
+						<p class="fifth-card-user-name">Kira Whittle</p>
+						<p class="fifth-card-user-verified">Verified Graduate</p>
 					</div>
 				</div>
-				<article>
-					<p>Such a life-changing experience. Highly recommended!</p>
+				<article class="fifth-card-title-container">
+					<p class="fifth-card-title-text">
+						Such a life-changing experience. Highly recommended!
+					</p>
 				</article>
-				<article>
-					<p>
+				<article class="fifth-card-content-container">
+					<p class="fifth-card-content-text">
 						“ Before joining the bootcamp, I’ve never written a line of code. I
 						needed some structure from professionals who can help me learn
 						programming step by step. I was encouraged to enroll by a former
