Desktop screen was do it

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		/>
 
 		<!-- CSS File -->
-		<link rel="stylesheet" href="./src/css/main.css" />
+		<link rel="stylesheet" href="./src/css/index.css" />
 	</head>
 	<body>
-		<main class="main-wrapper">
+		<main class="main">
 			<!-- First Card -->
 			<section class="first-card">
 				<div class="first-card-user-container">
